--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="header">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
         <img src="assets/pngegg.png" alt="Pokémon Logo" class="pokemon-logo">
         <h1>Jibraeels Pokédex</h1>
     </div>
