Added tooltip to search bar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="assets/pngegg.png" alt="Pokémon Logo" class="pokemon-logo">
         <h1>Jibraeels Pokédex</h1>
     </div>
-    <input id="search-input" type="text" placeholder="Enter Pokémon name" required>
+    <input id="search-input" type="text" placeholder="Enter Pokémon name" title="Type Pokémon name here" required>
     <div id="pokemon-container"></div>
     <script src="index.js"></script>
 </body>
