--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jibraeels Pokédex</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/" href="/assets/image.png">
+    <link rel="icon" type="image" href="/assets/image.png">
 </head>
 <body>
     <div class="header">
